# macs

./: LICENSE  README.md
artificial intelligence/: README.md
artificial intelligence/proj1-search/: search.py  searchAgents.py
artificial intelligence/proj2-multiagent/: multiAgents.py
artificial intelligence/proj3-reinforcement/: analysis.py  qlearningAgents.py  (+1 more)
bioinformatics/: README.md
blockchain technologies/: README.md
blockchain technologies/assignment-2-transaction-serializer/: .gitignore  Cargo.toml  README.md
blockchain technologies/assignment-2-transaction-serializer/src/: main.rs
blockchain technologies/assignment-4-solana-staking-program/: .gitignore  Cargo.toml  README.md  package-lock.json  package.json
blockchain technologies/assignment-4-solana-staking-program/src/: entrypoint.rs  error.rs  instruction.rs  processor.rs  state.rs
blockchain technologies/final-project/programs/nft-marketplace/: Cargo.toml
blockchain technologies/final-project/programs/nft-marketplace/src/: context.rs  error.rs  lib.rs  processor.rs  state.rs
computer networks/: README.md
cryptography/: README.md
data structures and algorithms/: README.md
databases/: README.md
design patterns/: README.md
distributed systems/: README.md
intro to cybersecurity/: README.md
machine learning/: README.md
nand2tetris/: README.md
natural language processing/: README.md
object oriented programming/: README.md
os engineering/: README.md
programming abstractions/: README.md
programming methodologies/: README.md
programming paradigms/: README.md
theoretical informatics/: README.md
(+686 files in other folders)
