[package]
name = "blockchain-technologies-assignment-2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.5"
bitcoin = "0.31.0"
bs58 = "0.5.0"
hex = "0.4.3"
rand = "0.8.5"
reqwest = "0.11.22"
ripemd = "0.1.3"
secp256k1 = { version = "0.28.0", features = ["rand"] }
serde_json = "1.0.107"
sha256 = "1.4.0"
tokio = { version = "1.33.0", features = ["full"] }
