[package]
name = "blockchain-technologies-assignment-4"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-program = "=1.17.17"
spl-token = { version = "4.0.0", features = ["no-entrypoint"] }
borsh = "0.9.0"
thiserror = "1.0.56"

[lib]
crate-type = ["cdylib", "lib"]
