[package]
name = "nft-marketplace"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "nft_marketplace"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = {version = "0.29.0", features = ["init-if-needed"] }
mpl-token-metadata = { version = "1.9.1", features = ["no-entrypoint"] }
ahash = "=0.8.6"
anchor-spl = "0.29.0"
